--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "lipsync-js",
-    "version": "1.0.0",
+    "version": "1.0.5",
     "description": "A powerful library for processing audio files and generating mouth shapes for lip-sync animations.",
     "type": "module",
     "main": "src/index.js",
@@ -20,7 +20,11 @@
     "author": "Ionathan Sideras",
     "license": "MIT",
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
         "fft-js": "^0.0.12",
+        "fs": "^0.0.1-security",
+        "mfcc": "^0.0.3",
         "wav-decoder": "^1.3.0"
     }
 }
