--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start:": "nodemon tts.js",
+        "dev": "nodemon tts.js"
     },
     "keywords": [
         "audio",
@@ -26,5 +27,8 @@
         "fs": "^0.0.1-security",
         "mfcc": "^0.0.3",
         "wav-decoder": "^1.3.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
